[package]
name = "tracing-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["sync", "time"] }
tracing = { version = "0.1.40", features = ["valuable"] }
url = "2.5.2"
valuable = { version = "0.1.0", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tracing-opentelemetry = "0.27.0"
tracing-subscriber = "0.3.18"
